ralice un parrafo en ligar del titulo
realice un parrafo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1> bienbenido a nuestra pagina web aqui podras ver nuestro trabajos</h1>
-    <h2> todo esta actualizado</h2>
+     <p> ahora es un parrafo</p>
 </body>
 </html>
