--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1> bienbenido a nuestra pagina web aqui podras ver nuestro trabajos</h1>
      <p> ahora es un parrafo</p>
+     <h2>no entendi la bifurcacion master</h2>
 </body>
 </html>
