--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1> bienbenido a nuestra pagina web aqui podras ver nuestro trabajos</h1>
      <p> ahora es un parrafo</p>
+     <h2>ya entendi la bifurcacion master</h2>
+     <h3> dije que ya habia entendido la rama</h3>
 </body>
 </html>
