--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1> bienbenido a nuestra pagina web aqui podras ver nuestro trabajos</h1>
      <p> ahora es un parrafo</p>
+     <p> ahora es un segundo parrafo</p>
+     
 </body>
 </html>
