--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1> bienbenido a nuestra pagina web aqui podras ver nuestro trabajos</h1>
      <p> ahora es un parrafo</p>
-     <p> ahora es un segundo parrafo</p>
+     <p> ahora es un segundo parrafo y lo edite en el navegador</p>
      
 </body>
 </html>
