--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1> bienbenido a nuestra pagina web aqui podras ver nuestro trabajos</h1>
      <p> ahora es un parrafo</p>
      <p> ahora es un segundo parrafo y lo edite en el navegador</p>
+     <p>agregue un tercer parrafo</p>
+
      
 </body>
 </html>
